--- a/src/main/resources/bootstrap.yml
+++ b/src/main/resources/bootstrap.yml
@@ -11,5 +11,9 @@ eureka:
   #由于注册中心的职责就是维护服务实例,它并不需要去检索服务,所以也设置为false
   serviceUrl:
     defaultZone: http://${eureka.instance.hostname}:${server.port}/eureka/
-
-
+security:
+  basic:
+    enabled: true
+  user:
+    name: xuhui
+    password: xuhui123456
